# Cybersecurity-Projects

./: .pre-commit-config.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  LICENSE  README.md  links  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-dns-lookup.yml
PROJECTS/Aenebris/: .gitignore  aenebris.cabal
PROJECTS/Aenebris/src/Aenebris/: Proxy.hs
PROJECTS/api-security-scanner/: .env.example
PROJECTS/api-security-scanner/.github/workflows/: lint.yml
PROJECTS/api-security-scanner/backend/: __init__.py  config.py  factory.py  main.py  pyproject.toml  requirements.txt
PROJECTS/api-security-scanner/backend/core/: database.py  dependencies.py  security.py
PROJECTS/api-security-scanner/backend/models/: Base.py  Scan.py  TestResult.py  User.py
PROJECTS/api-security-scanner/backend/repositories/: scan_repository.py  test_result_repository.py  user_repository.py
PROJECTS/api-security-scanner/backend/routes/: auth.py  scans.py
PROJECTS/api-security-scanner/backend/scanners/: auth_scanner.py  base_scanner.py  idor_scanner.py  payloads.py  rate_limit_scanner.py  sqli_scanner.py
PROJECTS/api-security-scanner/backend/schemas/: scan_schemas.py  test_result_schemas.py  user_schemas.py
PROJECTS/api-security-scanner/backend/services/: auth_service.py  scan_service.py
PROJECTS/api-security-scanner/frontend/: package-lock.json  package.json
PROJECTS/api-security-scanner/frontend/src/: App.tsx  router.tsx
PROJECTS/bug-bounty-platform/: .env.example  .gitignore  README.md
PROJECTS/bug-bounty-platform/backend/: pyproject.toml
PROJECTS/bug-bounty-platform/backend/app/: config.py
PROJECTS/bug-bounty-platform/frontend/: index.html
PROJECTS/dns-lookup/: README.md  pyproject.toml
PROJECTS/dns-lookup/dnslookup/: __init__.py
PROJECTS/encrypted-p2p-chat/backend/: pyproject.toml
PROJECTS/encrypted-p2p-chat/backend/app/: factory.py
PROJECTS/keylogger/: Makefile  keylogger.py  pyproject.toml  requirements.txt
PROJECTS/metadata-scrubber-tool/: .gitignore  README.md
PROJECTS/simple-port-scanner/: README.md
PROJECTS/simple-port-scanner/src/: PortScanner.cpp  PortScanner.hpp
SYNOPSES/advanced/: Cloud.Security.Posture.Management.md
SYNOPSES/beginner/: ARP.Spoofing.Detector.md  Base64.Encoder.Decoder.md  File.Integrity.Monitor.md  Firewall.Log.Parser.md  MAC.Address.Spoofer.md  Phishing.URL.Detector.md  Ransomware.Simulator.md  Windows.Registry.Monitor.md
src/: main.py
src/commands/: verify.py
src/core/: jpeg_metadata.py  png_metadata.py
src/services/: batch_processor.py  image_handler.py  metadata_factory.py  metadata_handler.py  report_generator.py  worddoc_handler.py
src/utils/: display.py  jpeg_metadata.py
tests/e2e/: test_read_command.py  test_scrub_command.py  test_verify_command.py
tests/integration/: test_metadata_factory.py
tests/unit/: test_image_handler.py
typings/piexif/: _common.pyi  _dump.pyi  _exceptions.pyi  _insert.pyi  _load.pyi  _remove.pyi  _transplant.pyi  _webp.pyi  helper.pyi
(+23 files in other folders)
